--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "colors": "^1.4.0",
     "date-fns": "^2.28.0",
     "moment": "^2.29.2",
+    "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
   }
 }
