--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
+  "name": "hw4",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0",
-    "date-fns": "^2.28.0",
-    "moment": "^2.29.2",
-    "readline-sync": "^1.4.10"
+    "inquirer": "^8.2.0",
+    "yargs": "^17.2.1"
   }
 }
